Fixed z-index problem for column visibility in tables

--- a/peerinst/static/peerinst/css/layout/content.scss
+++ b/peerinst/static/peerinst/css/layout/content.scss
@@ -3,11 +3,9 @@
     bottom: 0;
     left: 0;
     margin: 0;
-    overflow: auto;
     padding: 0 20px 20px 20px;
-    position: fixed;
+    position: relative;
     right: 0;
     top: 60px;
-    z-index: 0;
   }
 }
